# Projet-PPN

./: CMakeLists.txt  README.md
include/: AdamOptimizer.h  Conv2D.h  Dense.h  Flatten.h  Layer.h  LossFunctions.h  MLP.h  MNISTReader.h  MaxPooling2D.h  NeuralNetwork.h  Neuron.h
src/: AdamOptimizer.cpp  Conv2D.cpp  Dense.cpp  Flatten.cpp  Layer.cpp  LossFunctions.cpp  MLP.cpp  MNISTReader.cpp  MaxPooling2D.cpp  NeuralNetwork.cpp  Neuron.cpp  main.cpp
